--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>Image Slider</title>
   </head>
   <body>
     <div class="carousel-container" >
