--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="style.css" />
-    <title>Image Slider</title>
+    <title>Pizza Slider</title>
   </head>
   <body>
     <div class="carousel-container" >
@@ -12,25 +12,31 @@
       </div>
       <div class="carousel">
         <div class="item main">
-          <img src="images/image1.jpg" alt="monument" />
+          <img src="images/ItalianPizza.jpg" alt="Italian Pizza" />
           <div class="caption">
-            The Harriet Tubman Memorial, also known as Swing Low, located in
-            Manhattan
+            Italian-Style Pizza.
           </div>
         </div>
         <div class="item">
-          <img src="images/image2.jpg" alt="monument" />
-          <div class="caption">Joan of Arc monument in Riverside Park</div>
-        </div>
-        <div class="item">
-          <img src="images/image3.jpg" alt="monument" />
-          <div class="caption">
-            The USS Maine National Monument located at the Merchants' Gate
-            entrance to Central Park
+          <img src="images/NYPizza.jpg" alt="New York Pizza" x/>
+          <div class="caption">New York-Style Pizza
           </div>
         </div>
-      </div>
+        <div class="item">
+          <img src="images/ChicagoPizza.jpg" alt="Chicago Pizza" />
+          <div class="caption">
+            Chicago-Style Pizza
+          </div>
+        </div>
+        <div class="item">
+          <img src="images/GreekPizza.jpg" alt="Greek Pizza" />
+          <div class="caption">
+            Greek-Style Pizza
+          </div>
+        </div>
     </div>
     <script src="script.js"></script>
+    <br></br>
+    <br></br>
   </body>
 </html>
